[gd_scene load_steps=2 format=3 uid="uid://kwl862q8suuv"]

[ext_resource type="Script" path="res://scenes_and_scripts/menu/menu_option/gameOptions.gd" id="1_xgits"]

[node name="GameOptions" type="Node2D"]
script = ExtResource("1_xgits")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.172549, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.34
anchor_bottom = 1.0
offset_right = 178.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorRect/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 300

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="soundValueLabel" type="Label" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Sound value"

[node name="soundValueSlider" type="HSlider" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="soundValueNumber" type="Label" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100%"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="musicValueLabel" type="Label" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music value"

[node name="musicValueSlider" type="HSlider" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="musicValueNumber" type="Label" parent="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "100%"

[node name="back" type="Button" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.717647, 0.647059, 1)
theme_override_font_sizes/font_size = 40
text = "â‡š"
flat = true

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/back"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
ignore_texture_size = true

[connection signal="value_changed" from="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/soundValueSlider" to="." method="_on_sound_value_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer3/musicValueSlider" to="." method="_on_music_value_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/back" to="." method="_on_back_pressed"]
